WAF-FLE ChangeLog



Version 0.6.4: 2014
-------------
Improve: mlog2waffle requirements better clarified em their README, and
         now is possible to use it with old version of libwww-perl, but 
         no self-signed certificate in that case;
Improve: Better error message in case of database error;


Version 0.6.3: Jan, 30 2014
-------------
Bug: mlog2waffle in batch mode dont exit after finish. Fixed.
Bug: fixed mlog2waffle.ubuntu init script to allow start as a daemon in 
     batch mode.
Bug: Fixed issues #21 and #25, when an incomplete request is rejected by
     waf-fle's  database schema, producing an error 500;
Bug: Fixed filter dialog showed in login page when accessed with a valid 
     session
Bug: Fixed issue #20, setup now handle database privilege when mysql and 
     waf-fle are in diferent hosts. Now you can specify the client 
     hostname/address or even a wildcard on setup.
Bug: Fixed issue #26, where the timming filters are not filtering 
     properly. 
Bug: Fixed issue #28, delete events by filter hit a error 500, when any 
     filter beyond date range is used.
Improve: Event delete limit ($deleteLimit) and delete wait ($deleteWait)
         is now parameters in config.php, as sugested in issue #31. This 
         parameters also affect Mark as False Positive events of Current 
         Filter.
Improve: when used with SSL mlog2waffle now allow to define if 
         certificate need to be validated or not. Needed when a self-
         signed certificate is used. Edit mlog2waffle.conf to configure.
Improve: Apache authorization config ajusted to be compatible with 
         version 2.4+, see waf-fle.conf comments for details.
Improve: Give more enfasis on success message on setup (instructing to 
         edit config.php when finished).
Improve: ChangeLog reformated

Version 0.6.1: Apr, 23 2013
-------------
Bug: Solve a issue with no standard timezones, like used in Venezuela.


Version 0.6.0: Apr, 23 2013
-------------